# bank-ticket-classification

./: .gitignore  dvc.yaml  params.yaml  params.yml  pyproject.toml  readme.md
.dvc/: config
classes/: filemanager.py
data/: .gitignore  raw.dvc
data/featured/: .gitignore
notebooks/: EDA-Experimenting.ipynb
src/: featurization.py  process.py
src/utils/: featurization_util.py  filemanager.py  process_util.py  processing.py
