[tool.poetry]
name = "bank-ticket-classification"
version = "0.1.0"
description = "Ticket classification using banking complaints"
authors = ["Eric Hoanshelt <ehoanshelt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"
dvc = "^3.17.0"
dvc-s3 = "^2.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
