[tool.poetry]
name = "bank-ticket-classification"
version = "0.1.0"
description = "Ticket classification using banking complaints"
authors = ["Eric Hoanshelt <ehoanshelt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"
dvc = "^3.17.0"
dvc-s3 = "^2.23.0"
nltk = "^3.8.1"
spacy = "^3.6.1"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.6.0/en_core_web_sm-3.6.0-py3-none-any.whl"}
textblob = "^0.17.1"


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
wordcloud = "^1.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

